[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/menu_button.tres" type="Theme" id=3]
[ext_resource path="res://fonts/spacer_12.tres" type="DynamicFont" id=4]
[ext_resource path="res://script/settings_menu.gd" type="Script" id=5]
[ext_resource path="res://script/rich_text_siny.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.1116, 0.1116, 0.18, 0.0980392 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RichTextEffect" id=5]
script = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.388235, 0.180392, 0.180392, 0.701961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
expand_margin_bottom = 2.0
shadow_color = Color( 0, 0, 0, 0.345098 )
shadow_offset = Vector2( 0, -1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.2, 0.092, 0.092, 0.701961 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
shadow_offset = Vector2( 0, -1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.388235, 0.180392, 0.180392, 0.701961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SettingsMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Title" type="RichTextLabel" parent="Menu"]
margin_top = 61.0
margin_right = 600.0
margin_bottom = 106.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "settings"
text = "settings"
fit_content_height = true
custom_effects = [ SubResource( 5 ) ]

[node name="Tabs" type="TabContainer" parent="Menu"]
margin_top = 110.0
margin_right = 600.0
margin_bottom = 510.0
rect_min_size = Vector2( 0, 400 )
theme = ExtResource( 3 )
custom_colors/font_color_bg = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_colors/font_color_fg = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )

[node name="general" type="ScrollContainer" parent="Menu/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 36.0
margin_right = -2.0
margin_bottom = -2.0
scroll_horizontal_enabled = false

[node name="Cols" type="HBoxContainer" parent="Menu/Tabs/general"]
margin_right = 596.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="L" type="VBoxContainer" parent="Menu/Tabs/general/Cols"]
margin_right = 286.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="Spacer" type="Label" parent="Menu/Tabs/general/Cols/L"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="RichText" type="Label" parent="Menu/Tabs/general/Cols/L"]
margin_top = 16.0
margin_right = 286.0
margin_bottom = 40.0
text = "use rich text"
align = 2

[node name="Label5" type="Label" parent="Menu/Tabs/general/Cols/L"]
margin_top = 44.0
margin_right = 286.0
margin_bottom = 68.0
text = "sample text"
align = 2

[node name="R" type="VBoxContainer" parent="Menu/Tabs/general/Cols"]
margin_left = 310.0
margin_right = 596.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="Spacer" type="Label" parent="Menu/Tabs/general/Cols/R"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="RichTextCheck" type="CheckBox" parent="Menu/Tabs/general/Cols/R"]
margin_top = 16.0
margin_right = 16.0
margin_bottom = 40.0
size_flags_horizontal = 0
pressed = true

[node name="Label2" type="Label" parent="Menu/Tabs/general/Cols/R"]
margin_top = 44.0
margin_right = 286.0
margin_bottom = 68.0
text = "something"

[node name="controls" type="ScrollContainer" parent="Menu/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Cols" type="HBoxContainer" parent="Menu/Tabs/controls"]
visible = false
margin_right = 4.0
margin_bottom = 12.0

[node name="LeftColumn" type="VBoxContainer" parent="Menu/Tabs/controls/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/controls/Cols/LeftColumn"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="RightColumn" type="VBoxContainer" parent="Menu/Tabs/controls/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/controls/Cols/RightColumn"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="graphics" type="ScrollContainer" parent="Menu/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Cols" type="HBoxContainer" parent="Menu/Tabs/graphics"]
visible = false
margin_right = 4.0
margin_bottom = 12.0

[node name="L" type="VBoxContainer" parent="Menu/Tabs/graphics/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/graphics/Cols/L"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="R" type="VBoxContainer" parent="Menu/Tabs/graphics/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/graphics/Cols/R"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="audio" type="ScrollContainer" parent="Menu/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Cols" type="HBoxContainer" parent="Menu/Tabs/audio"]
visible = false
margin_right = 4.0
margin_bottom = 12.0

[node name="L" type="VBoxContainer" parent="Menu/Tabs/audio/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/audio/Cols/L"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="R" type="VBoxContainer" parent="Menu/Tabs/audio/Cols"]

[node name="Spacer" type="Label" parent="Menu/Tabs/audio/Cols/R"]
margin_right = 286.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 4 )

[node name="CenterContainer" type="HBoxContainer" parent="Menu"]
margin_top = 514.0
margin_right = 600.0
margin_bottom = 538.0
grow_horizontal = 2
alignment = 1

[node name="ExitButton" type="Button" parent="Menu/CenterContainer"]
margin_left = 240.0
margin_right = 360.0
margin_bottom = 24.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "exit"

[connection signal="toggled" from="Menu/Tabs/general/Cols/R/RichTextCheck" to="." method="_on_RichTextCheck_toggled"]
[connection signal="pressed" from="Menu/CenterContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
